# qa_guru_homework_16

./: pyproject.toml
