[tool.poetry]
name = "kirill-sharevich"
version = "0.1.0"
description = "homework_16"
authors = ["checamar0 <checamar02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc9"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
